# ecomm_product_assistant

./: .gitignore  get_lib_versions.py  pyproject.toml  scraper_ui.py  scrapper_ui.py
data/: product_reviews.csv
notebook/: testing.ipynb
prod_assistant/etl/: data_ingestion.py  data_scraper.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/prompt_library/: prompts.py
prod_assistant/retriever/: retrieval.py
prod_assistant/workflow/: agentic_rag_workflow.py  generation_workflow.py
